--- a/labs/lab2/index.html
+++ b/labs/lab2/index.html
@@ -3,6 +3,7 @@
     <title>WebPack Fun</title>
   </head>
   <body>
-    <script src="dist/bundle.js"></script>
+    <script src="dist/common.js"></script>
+    <script src="dist/index.js"></script>
   </body>
 </html>
